k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: weather-app
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
        - image: lh32469/weather:latest
          name: weather
          livenessProbe:
            httpGet:
              path: /ping
              port: 8085
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 15
            periodSeconds: 10

---

kind: Service
apiVersion: v1
metadata:
  name: weather-service
spec:
  selector:
    app: weather-app
  ports:
    - port: 8085 # Default port for image

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - HOSTNAME.gpc4j.org
      secretName: tls-secret
  rules:
    - host: HOSTNAME.gpc4j.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: weather-service
                port:
                  number: 8085
