orchestration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: weather-app
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: weather-app
    spec:
      hostAliases:
      - ip: "192.168.5.220"
        hostnames:
        - "dell-4290.local"
      containers:
      - image: localhost:32000/weather
        name: weather
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m

---

kind: Service
apiVersion: v1
metadata:
  name: weather-service
spec:
  selector:
    app: weather-app
  ports:
    - port: 8085 # Default port for image

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /weather
spec:
  rules:
  - http:
      paths:
      - path: /weather
        pathType: Prefix
        backend:
          service:
            name: weather-service
            port:
              number: 8085
