weather.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: weather-app
  name: weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  strategy: { }
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: weather-app
    spec:
      hostAliases:
        - ip: "192.168.5.220"
          hostnames:
            - "dell-4290.local"
      containers:
        - image: lh32469/weather:latest
          name: weather
          resources:
            limits:
              cpu: "1.25"
            requests:
              cpu: ".25"
          livenessProbe:
            httpGet:
              path: /ping
              port: 8085
              httpHeaders:
                - name: Custom-Header
                  value: Awesome
            initialDelaySeconds: 15
            periodSeconds: 5

---

kind: Service
apiVersion: v1
metadata:
  name: weather-service
spec:
  selector:
    app: weather-app
  ports:
    - port: 8085 # Default port for image

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: weather.k8s.gpc4j.org
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: weather-service
                port:
                  number: 8085
